img name refresh

--- a/portfolio/folio/styles.css
+++ b/portfolio/folio/styles.css
@@ -84,7 +84,7 @@ li:last-child{
 	display: block;
 }
 #main{
-	background: #000 url(img/layer78.png) center/cover;
+	background: #000 url(img/Layer78.png) center/cover;
 	color: #fff;
 	overflow: hidden;
 }
